# conduyt-pilot

./: .gitignore  CLAUDE.md  README.md  THIRD_PARTY.md  pyproject.toml
data/boards/: adafruit-feather-esp32-s3.json  adafruit-feather-nrf52840-sense.json  arduino-nano-33-ble.json  arduino-uno-r4-wifi.json  esp32-s3-devkitc-1.json  raspberry-pi-pico-w.json  raspberry-pi-pico.json  seeed-xiao-esp32-c3.json
data/seeds/: arduino_basics.jsonl  arduino_i2c.jsonl  arduino_neopixel.jsonl  arduino_spi.jsonl  conduyt_advanced.jsonl  conduyt_basics.jsonl  esp_arduino_wifi.jsonl  esp_idf_basics.jsonl  platformio_configs.jsonl  v2_conduyt_js_api_docs.jsonl  v2_conduyt_js_arduino_override.jsonl  v2_conduyt_js_multiturn.jsonl  v2_conduyt_js_single.jsonl  v3_arduino_reference.jsonl  v3_conduyt_docs.jsonl  v3_conduyt_js_mirror.jsonl  v3_disambiguation.jsonl  v3_dont_mix.jsonl  v3_multiturn_evolve.jsonl  v3_side_by_side.jsonl  v4_actuators_deep.jsonl  v4_board_specific_facts.jsonl  v4_circuit_patterns.jsonl  v4_component_selection.jsonl  v4_debug_diagnostics.jsonl  v4_electronics_fundamentals.jsonl  v4_power_management.jsonl  v4_project_archetypes.jsonl  v4_protocols_deep.jsonl  v4_sensors_deep.jsonl  v5_mascarade_embedded.jsonl  v5_mascarade_iot.jsonl  v5_mascarade_platformio.jsonl  (+1 more)
kaggle/: README.md  convert_mlc.ipynb  train.ipynb
prompts/: synthesis_system.md  synthesis_template.md
scripts/: 01_generate_synthetic.py  02_validate_dataset.py  03_dedupe_dataset.py  04_split_train_eval.py  05_build_kaggle_dataset.py  06_test_local.py  07_extract_conduyt_docs.py
(+7 files in other folders)
