[project]
name = "conduyt-pilot"
version = "0.1.0"
description = "Phase 1 dataset toolkit for the conduyt fine-tune pilot."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "anthropic>=0.39.0",
    "pydantic>=2.7.0",
    "jsonlines>=4.0.0",
    "tiktoken>=0.7.0",
    "pyyaml>=6.0.1",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
semantic = [
    "sentence-transformers>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
